BirchOutline/birch-outline.js/src/date-time-parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { DateTimeExpression: peg$parseDateTimeExpression, Time: peg$parseTime, Duration: peg$parseDuration },
      peg$startRuleFunction  = peg$parseDateTimeExpression,

      peg$c0 = function(dateTime, time, durations) {
            if (!dateTime) {
              dateTime = currentMoment()
            }

            var result = options.moment(dateTime)

            if (time) {
              result = result.startOf('day');
              result.add(time);
            }

            durations.forEach(function(each) {
              result.add(each[0]);
            });

            return result;
          },
      peg$c1 = ":",
      peg$c2 = peg$literalExpectation(":", false),
      peg$c3 = "-",
      peg$c4 = peg$literalExpectation("-", false),
      peg$c5 = function(year, month, day) {
            if (month) {
              month = month[1]
            } else {
              month = 0
            }

            if (day) {
              day = day[1]
            } else {
              day = 1
            }
            return options.moment([year[0], month, day]);
          },
      peg$c6 = /^[0-9]/,
      peg$c7 = peg$classExpectation([["0", "9"]], false, false),
      peg$c8 = function(year) {
            return parseInt(year.join(''), 10);
          },
      peg$c9 = function(month) {
            return parseInt(month.join(''), 10) - 1;
          },
      peg$c10 = function(day) {
            return parseInt(day.join(''), 10);
          },
      peg$c11 = "now",
      peg$c12 = peg$literalExpectation("now", true),
      peg$c13 = function() { return currentMoment(); },
      peg$c14 = "yesterday",
      peg$c15 = peg$literalExpectation("yesterday", true),
      peg$c16 = function() { return currentMoment().startOf('day').subtract(1, 'day'); },
      peg$c17 = "today",
      peg$c18 = peg$literalExpectation("today", true),
      peg$c19 = function() { return currentMoment().startOf('day'); },
      peg$c20 = "tomorrow",
      peg$c21 = peg$literalExpectation("tomorrow", true),
      peg$c22 = function() { return currentMoment().startOf('day').add(1, 'day'); },
      peg$c23 = function(specifier, month, day) {
            if (day == undefined) {
              day = 1;
            }

            if (!specifier || specifier == 'this') {
              return currentMoment().startOf('day').month(month).date(day)
            } else if (specifier == 'next') {
              return currentMoment().startOf('day').month(month).date(day).add(1, 'year')
            } else if (specifier == 'last') {
              return currentMoment().startOf('day').month(month).date(day).subtract(1, 'year')
            }
          },
      peg$c24 = "this",
      peg$c25 = peg$literalExpectation("this", true),
      peg$c26 = "next",
      peg$c27 = peg$literalExpectation("next", true),
      peg$c28 = "last",
      peg$c29 = peg$literalExpectation("last", true),
      peg$c30 = function(specifier) {
            return specifier.toLowerCase();
          },
      peg$c31 = "january",
      peg$c32 = peg$literalExpectation("january", true),
      peg$c33 = "jan",
      peg$c34 = peg$literalExpectation("jan", true),
      peg$c35 = "february",
      peg$c36 = peg$literalExpectation("february", true),
      peg$c37 = "feb",
      peg$c38 = peg$literalExpectation("feb", true),
      peg$c39 = "march",
      peg$c40 = peg$literalExpectation("march", true),
      peg$c41 = "mar",
      peg$c42 = peg$literalExpectation("mar", true),
      peg$c43 = "april",
      peg$c44 = peg$literalExpectation("april", true),
      peg$c45 = "apr",
      peg$c46 = peg$literalExpectation("apr", true),
      peg$c47 = "may",
      peg$c48 = peg$literalExpectation("may", true),
      peg$c49 = "june",
      peg$c50 = peg$literalExpectation("june", true),
      peg$c51 = "jun",
      peg$c52 = peg$literalExpectation("jun", true),
      peg$c53 = "july",
      peg$c54 = peg$literalExpectation("july", true),
      peg$c55 = "jul",
      peg$c56 = peg$literalExpectation("jul", true),
      peg$c57 = "august",
      peg$c58 = peg$literalExpectation("august", true),
      peg$c59 = "aug",
      peg$c60 = peg$literalExpectation("aug", true),
      peg$c61 = "september",
      peg$c62 = peg$literalExpectation("september", true),
      peg$c63 = "sep",
      peg$c64 = peg$literalExpectation("sep", true),
      peg$c65 = "october",
      peg$c66 = peg$literalExpectation("october", true),
      peg$c67 = "oct",
      peg$c68 = peg$literalExpectation("oct", true),
      peg$c69 = "november",
      peg$c70 = peg$literalExpectation("november", true),
      peg$c71 = "nov",
      peg$c72 = peg$literalExpectation("nov", true),
      peg$c73 = "december",
      peg$c74 = peg$literalExpectation("december", true),
      peg$c75 = "dec",
      peg$c76 = peg$literalExpectation("dec", true),
      peg$c77 = function(specifier, day) {
            if (!specifier || specifier == 'this') {
              return currentMoment().startOf('day').isoWeekday(day);
            } else if (specifier == 'next') {
              return currentMoment().startOf('day').isoWeekday(day).add(1, 'week');
            } else if (specifier == 'last') {
              return currentMoment().startOf('day').isoWeekday(day).subtract(1, 'week');
            }
          },
      peg$c78 = function(specifier, durationUnit) {
            var durationStart = durationUnit
            if (durationStart == 'weeks') {
              durationStart = 'isoweeks';
            }
            if (specifier == 'this') {
              return currentMoment().startOf(durationStart);
            } else if (specifier == 'next') {
              return currentMoment().startOf(durationStart).add(1, durationUnit);
            } else if (specifier == 'last') {
              return currentMoment().startOf(durationStart).subtract(1, durationUnit);
            }
          },
      peg$c79 = "monday",
      peg$c80 = peg$literalExpectation("monday", true),
      peg$c81 = "mont",
      peg$c82 = peg$literalExpectation("mont", true),
      peg$c83 = "mon",
      peg$c84 = peg$literalExpectation("mon", true),
      peg$c85 = function() { return 'mon'; },
      peg$c86 = "tuesday",
      peg$c87 = peg$literalExpectation("tuesday", true),
      peg$c88 = "tue",
      peg$c89 = peg$literalExpectation("tue", true),
      peg$c90 = "wednesday",
      peg$c91 = peg$literalExpectation("wednesday", true),
      peg$c92 = "wed",
      peg$c93 = peg$literalExpectation("wed", true),
      peg$c94 = "thursday",
      peg$c95 = peg$literalExpectation("thursday", true),
      peg$c96 = "thu",
      peg$c97 = peg$literalExpectation("thu", true),
      peg$c98 = "friday",
      peg$c99 = peg$literalExpectation("friday", true),
      peg$c100 = "fri",
      peg$c101 = peg$literalExpectation("fri", true),
      peg$c102 = "saturday",
      peg$c103 = peg$literalExpectation("saturday", true),
      peg$c104 = "sat",
      peg$c105 = peg$literalExpectation("sat", true),
      peg$c106 = "sunday",
      peg$c107 = peg$literalExpectation("sunday", true),
      peg$c108 = "sun",
      peg$c109 = peg$literalExpectation("sun", true),
      peg$c110 = "at",
      peg$c111 = peg$literalExpectation("at", true),
      peg$c112 = function(hours, period) {
            if (period == 'pm') {
              hours += 12;
            }
            return options.moment.duration({ hours: hours });
          },
      peg$c113 = function(hours, minutes, seconds, milliseconds, period) {
            if (period == 'pm') {
              hours += 12;
            }

            if (seconds) {
              seconds = seconds[1];
            } else {
              seconds = 0;
            }

            if (milliseconds) {
              milliseconds = milliseconds[1]
            } else {
              milliseconds = 0
            }

            return options.moment.duration({
              hours: hours,
              minutes: minutes[1],
              seconds: seconds,
              milliseconds: milliseconds
            });
          },
      peg$c114 = "pm",
      peg$c115 = peg$literalExpectation("pm", true),
      peg$c116 = "am",
      peg$c117 = peg$literalExpectation("am", true),
      peg$c118 = function(period) {
            return period.toLowerCase();
          },
      peg$c119 = "+",
      peg$c120 = peg$literalExpectation("+", false),
      peg$c121 = function(adjust, quantity, durationUnit) {
            if (adjust == '-') {
              quantity *= -1
            }
            return options.moment.duration(quantity, durationUnit);
          },
      peg$c122 = "milliseconds",
      peg$c123 = peg$literalExpectation("milliseconds", true),
      peg$c124 = "millisecond",
      peg$c125 = peg$literalExpectation("millisecond", true),
      peg$c126 = "ms",
      peg$c127 = peg$literalExpectation("ms", true),
      peg$c128 = function() { return 'milliseconds' },
      peg$c129 = "seconds",
      peg$c130 = peg$literalExpectation("seconds", true),
      peg$c131 = "second",
      peg$c132 = peg$literalExpectation("second", true),
      peg$c133 = "sec",
      peg$c134 = peg$literalExpectation("sec", true),
      peg$c135 = "sa",
      peg$c136 = peg$literalExpectation("sa", true),
      peg$c137 = "su",
      peg$c138 = peg$literalExpectation("su", true),
      peg$c139 = "s",
      peg$c140 = peg$literalExpectation("s", true),
      peg$c141 = function() { return 'seconds' },
      peg$c142 = "minutes",
      peg$c143 = peg$literalExpectation("minutes", true),
      peg$c144 = "minute",
      peg$c145 = peg$literalExpectation("minute", true),
      peg$c146 = "mins",
      peg$c147 = peg$literalExpectation("mins", true),
      peg$c148 = "min",
      peg$c149 = peg$literalExpectation("min", true),
      peg$c150 = "mo",
      peg$c151 = peg$literalExpectation("mo", true),
      peg$c152 = "ma",
      peg$c153 = peg$literalExpectation("ma", true),
      peg$c154 = "m",
      peg$c155 = peg$literalExpectation("m", true),
      peg$c156 = function() { return 'minutes' },
      peg$c157 = "hours",
      peg$c158 = peg$literalExpectation("hours", true),
      peg$c159 = "hour",
      peg$c160 = peg$literalExpectation("hour", true),
      peg$c161 = "h",
      peg$c162 = peg$literalExpectation("h", true),
      peg$c163 = function() { return 'hours' },
      peg$c164 = "days",
      peg$c165 = peg$literalExpectation("days", true),
      peg$c166 = "day",
      peg$c167 = peg$literalExpectation("day", true),
      peg$c168 = "de",
      peg$c169 = peg$literalExpectation("de", true),
      peg$c170 = "d",
      peg$c171 = peg$literalExpectation("d", true),
      peg$c172 = function() { return 'days' },
      peg$c173 = "weeks",
      peg$c174 = peg$literalExpectation("weeks", true),
      peg$c175 = "week",
      peg$c176 = peg$literalExpectation("week", true),
      peg$c177 = "we",
      peg$c178 = peg$literalExpectation("we", true),
      peg$c179 = "w",
      peg$c180 = peg$literalExpectation("w", true),
      peg$c181 = function() { return 'weeks' },
      peg$c182 = "months",
      peg$c183 = peg$literalExpectation("months", true),
      peg$c184 = "month",
      peg$c185 = peg$literalExpectation("month", true),
      peg$c186 = "oc",
      peg$c187 = peg$literalExpectation("oc", true),
      peg$c188 = "o",
      peg$c189 = peg$literalExpectation("o", true),
      peg$c190 = function() { return 'months' },
      peg$c191 = "quarters",
      peg$c192 = peg$literalExpectation("quarters", true),
      peg$c193 = "quarter",
      peg$c194 = peg$literalExpectation("quarter", true),
      peg$c195 = "q",
      peg$c196 = peg$literalExpectation("q", true),
      peg$c197 = function() { return 'quarters' },
      peg$c198 = "years",
      peg$c199 = peg$literalExpectation("years", true),
      peg$c200 = "year",
      peg$c201 = peg$literalExpectation("year", true),
      peg$c202 = "y",
      peg$c203 = peg$literalExpectation("y", true),
      peg$c204 = function() { return 'years' },
      peg$c205 = peg$otherExpectation("integer"),
      peg$c206 = function() { return parseInt(text(), 10); },
      peg$c207 = peg$otherExpectation("whitespace"),
      peg$c208 = function(whitespace) { return whitespace.join("") },
      peg$c209 = /^[ \t\n\r]/,
      peg$c210 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$resultsCache = {},

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseDateTimeExpression() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    var key    = peg$currPos * 20 + 0,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseDate();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseTime();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$currPos;
            s7 = peg$parseDuration();
            if (s7 !== peg$FAILED) {
              s8 = peg$parse_();
              if (s8 !== peg$FAILED) {
                s7 = [s7, s8];
                s6 = s7;
              } else {
                peg$currPos = s6;
                s6 = peg$FAILED;
              }
            } else {
              peg$currPos = s6;
              s6 = peg$FAILED;
            }
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = peg$currPos;
              s7 = peg$parseDuration();
              if (s7 !== peg$FAILED) {
                s8 = peg$parse_();
                if (s8 !== peg$FAILED) {
                  s7 = [s7, s8];
                  s6 = s7;
                } else {
                  peg$currPos = s6;
                  s6 = peg$FAILED;
                }
              } else {
                peg$currPos = s6;
                s6 = peg$FAILED;
              }
            }
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c0(s1, s3, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseDate() {
    var s0;

    var key    = peg$currPos * 20 + 1,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$parseAbsoluteDate();
    if (s0 === peg$FAILED) {
      s0 = peg$parseRelativeDate();
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseAbsoluteDate() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    var key    = peg$currPos * 20 + 2,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parseYear();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      if (s3 !== peg$FAILED) {
        s4 = peg$currPos;
        peg$silentFails++;
        s5 = peg$parseDurationUnit();
        peg$silentFails--;
        if (s5 === peg$FAILED) {
          s4 = void 0;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          if (s5 !== peg$FAILED) {
            s6 = peg$currPos;
            peg$silentFails++;
            s7 = peg$parsePeriod();
            peg$silentFails--;
            if (s7 === peg$FAILED) {
              s6 = void 0;
            } else {
              peg$currPos = s6;
              s6 = peg$FAILED;
            }
            if (s6 !== peg$FAILED) {
              s7 = peg$parse_();
              if (s7 !== peg$FAILED) {
                s8 = peg$currPos;
                peg$silentFails++;
                if (input.charCodeAt(peg$currPos) === 58) {
                  s9 = peg$c1;
                  peg$currPos++;
                } else {
                  s9 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c2); }
                }
                peg$silentFails--;
                if (s9 === peg$FAILED) {
                  s8 = void 0;
                } else {
                  peg$currPos = s8;
                  s8 = peg$FAILED;
                }
                if (s8 !== peg$FAILED) {
                  s2 = [s2, s3, s4, s5, s6, s7, s8];
                  s1 = s2;
                } else {
                  peg$currPos = s1;
                  s1 = peg$FAILED;
                }
              } else {
                peg$currPos = s1;
                s1 = peg$FAILED;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$FAILED;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 45) {
        s3 = peg$c3;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parseMonthNumber();
        if (s4 !== peg$FAILED) {
          s3 = [s3, s4];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 45) {
          s4 = peg$c3;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parseDayNumberOfMonth();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s1, s2, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseYear() {
    var s0, s1, s2;

    var key    = peg$currPos * 20 + 3,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = [];
    if (peg$c6.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        if (peg$c6.test(input.charAt(peg$currPos))) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c7); }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c8(s1);
    }
    s0 = s1;

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseMonthNumber() {
    var s0, s1, s2;

    var key    = peg$currPos * 20 + 4,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
